# CairoSVG

./: .coveragerc  .gitignore  .gitmodules  .isort.cfg  .pylintrc  .travis.yml  CNAME  MANIFEST.in  NEWS  NEWS.rst  README  README.rst  TODO  TODO.rst  __init__.py  _config.yml  cairosvg.py  colors.py  configuration  configuration.yaml  documentation.md  index.html  news.html  parser.py  pytest.ini  setup.cfg  setup.py  surface.py  surface_type.py  svg_support.md  test.py  tox.ini
.github/workflows/: tests.yml
_layouts/: default.html  page.html
_posts/: 2012-02-17-road-to-cairosvg-1.0.md  2012-04-19-cairosvg-0.4.md  2012-12-13-cairosvg-0.5.md  2016-07-16-last-call-before-2.0.0.md  2016-11-25-version-2.0.0.md  2017-01-04-version-2.0.1.md  2017-05-02-version-2.0.3.md  2017-10-06-version-2.1.1.md  2017-12-01-version-2.1.2.md  2018-01-03-version-2.1.3.md  2018-09-26-version-2.2.0.md  2019-02-08-version-2.3.0.md  2019-04-18-version-2.3.1.md  2019-05-20-version-2.4.0.md  2019-08-21-version-2.4.1.md  2019-09-10-version-2.4.2.md  2020-10-29-version-2.5.0.md  2021-01-06-version-2.5.1.md  2021-03-06-version-2.5.2.md
cairosvg/: __init__.py  __main__.py  bounding_box.py  colors.py  css.py  defs.py  features.py  helpers.py  image.py  parser.py  path.py  shapes.py  surface.py  surface_type.py  svg.py  test.py  test_api.py  text.py  url.py
cairosvg/surface/: __init__.py  colors.py  defs.py  helpers.py  image.py  markers.py  path.py  shapes.py  svg.py  tags.py  text.py  units.py
css/: main.scss
news/gayoub/: 2012-02-17@12:29:22.rst  2012-04-19@13:18:49.rst  2012-12-13@13:08:44.rst
pages/: contribute.rst  documentation.rst  download.rst  home.rst  project_description.rst  svg_support.rst  user_documentation.rst
scripts/: installcairo.py
static/css/: style.css
test/: LICENSE  README.rst  __init__.py  test_api.py  test_helpers.py  test_non_regression.py
test/fail/: README.rst
test/fail/cairo/: README.rst
test/fail/color/: README.rst
test/fail/cond/: README.rst
test/fail/css/: README.rst
test/fail/draft/: README.rst
test/fail/filter/: README.rst
test/fail/gradient/: README.rst
test/fail/image/: README.rst
test/fail/linking/: README.rst
test/fail/marker/: README.rst
test/fail/mask/: README.rst
test/fail/na/: README.rst
test/fail/paths/: README.rst
test/fail/pattern/: README.rst
test/fail/rect/: README.rst
test/fail/text/: README.rst
test/fail/use/: README.rst
test/fail/viewbox/: README.rst
test/resources/: generate.py
test_non_regression/: README.rst  __init__.py  test_helpers.py  test_non_regression.py
test_non_regression/fail/cap/: README.rst
test_non_regression/fail/color/: README.rst
test_non_regression/fail/draft/: README.rst
test_non_regression/fail/filter/: README.rst
test_non_regression/fail/font/: README.rst
test_non_regression/fail/image/: README.rst
test_non_regression/fail/na/animation/: README.rst
test_non_regression/fail/na/interaction/: README.rst
test_non_regression/fail/na/script/: README.rst
test_non_regression/fail/path/: README.rst
test_non_regression/fail/viewbox/: README.rst
