[metadata]
name = CairoSVG
url = http://www.cairosvg.org/
version = file: cairosvg/VERSION
license = LGPLv3+
license_file = LICENSE
description = A Simple SVG Converter based on Cairo
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Guillaume Ayoub
author_email = community@kozea.fr
platforms =
  Linux
  macOS
  Windows
keywords =
  svg
  converter
  cairo
  pdf
  png
  postscript
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: End Users/Desktop
  License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
  Operating System :: OS Independent
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Topic :: Multimedia :: Graphics :: Graphics Conversion

[options]
packages = cairosvg
setup_requires =
  pytest-runner
  setuptools
install_requires =
  cairocffi
  cssselect2
  defusedxml
  pillow
  tinycss2
tests_require =
  pytest-cov
  pytest-flake8
  pytest-isort
  pytest-runner
python_requires = >= 3.5

[options.entry_points]
console-scripts =
  cairosvg = cairosvg.__main__:main

[options.package_data]
cairosvg = VERSION

[options.extras_require]
doc =
  sphinx
  sphinx_rtd_theme
test =
  pytest-runner
  pytest-cov
  pytest-flake8
  pytest-isort

[bdist_wheel]
python-tag = py3

[aliases]
test = pytest

[tool:pytest]
addopts =
  --flake8
  --isort
  --ignore=test_regression/cairosvg_reference
norecursedirs =
  build
  cairosvg_reference
  dist
  venv
  .cache
  .eggs
  .git
  *.egg-info

[isort]
default_section = THIRDPARTY
multi_line_output = 4
