[metadata]
name = CairoSVG
url = https://courtbouillon.org/cairosvg
version = file: cairosvg/VERSION
license = LGPLv3+
license_files = [ LICENSE ]
description = A Simple SVG Converter based on Cairo
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Guillaume Ayoub
author_email = contact@courtbouillon.org
platforms =
  Linux
  macOS
  Windows
keywords =
  svg
  converter
  cairo
  pdf
  png
  postscript
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: End Users/Desktop
  License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
  Operating System :: OS Independent
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Topic :: Multimedia :: Graphics :: Graphics Conversion
project_urls =
  Documentation = https://cairosvg.org/documentation/
  Code = https://github.com/Kozea/CairoSVG/
  Issue tracker = https://github.com/Kozea/CairoSVG/issues
  Donation = https://opencollective.com/courtbouillon

[options]
packages = cairosvg
setup_requires =
  setuptools
install_requires =
  cairocffi
  cssselect2
  defusedxml
  pillow
  tinycss2
python_requires = >= 3.5

[options.entry_points]
console-scripts =
  cairosvg = cairosvg.__main__:main

[options.package_data]
cairosvg = VERSION

[options.extras_require]
doc =
  sphinx
  sphinx_rtd_theme
test =
  pytest
  flake8
  isort

[bdist_wheel]
python-tag = py3

[tool:pytest]
norecursedirs =
  build
  cairosvg_reference
  dist
  test_regression/cairosvg_reference
  venv
  .cache
  .eggs
  .git
  *.egg-info

[isort]
default_section = THIRDPARTY
multi_line_output = 4
